style.css
*,
*::after,
*::before {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;

  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100dvh;

  background-color: burlywood;
}

main {
  width: 100%;
  max-width: 24rem;
  padding: 2rem;
  background-color: darkgray;
  border-radius: 1rem;
  border: 0.25rem solid color-mix(in oklab, darkgray 85%, black);
  box-shadow:
    inset 0 0 0 0.5rem color-mix(in oklab, darkgray 95%, black),
    0 0.5rem 0 0.5rem color-mix(in oklab, black 12%, transparent);

  display: flex;
  flex-direction: column;
  gap: 2rem;
}

#textbox-container {
  aspect-ratio: 4 / 1;
  width: 100%;
  background-color: cadetblue;
  outline: 0.25rem solid color-mix(in oklab, darkgray 75%, white);
  border: 0.25rem solid color-mix(in oklab, darkgray 90%, black);
  border-top-width: 0.35rem;
  border-radius: 0.5rem;
  box-shadow:
    inset 0 0 0 0.175rem color-mix(in oklab, black 10%, transparent),
    inset 0 1.5rem 0 0 color-mix(in oklab, white 10%, transparent);
  padding: 0 1rem;
  display: flex;
  align-items: center;
  justify-content: end;
  overflow-x: hidden;

  div {
    text-align: start;
    overflow-x: hidden;
    max-width: 100%;
    text-overflow: ellipsis;
    color: color-mix(in oklab, cadetblue 50%, black);
    font-size: 2.5rem;
    font-family: monospace;
  }

  &:focus {
    outline: 0.25rem solid lightgray;
  }
}
.numbers-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0.75rem;

  button {
    --bg: white;
    --fg: black;

    border: none;
    aspect-ratio: 4 / 3;
    border-radius: 0.75rem;
    background-color: var(--bg);
    color: var(--fg);
    box-shadow:
      0 0.25rem 0 0 color-mix(in oklab, var(--bg) 75%, black),
      0 0.25rem 0 0.125rem color-mix(in oklab, black 37%, transparent);

    font-size: 1.5rem;
    transition:
      25ms transform,
      background-color;

    &.act {
      --bg: steelblue;
      --fg: white;
    }
    &.num {
      --bg: lightgray;
    }
    &.equ {
      --bg: chocolate;
      --fg: white;
    }
    &.del {
      --bg: darkred;
      --fg: white;
    }

    &:hover {
      background-color: color-mix(in oklab, var(--bg) 95%, black);
    }

    &:active {
      background-color: var(--bg);
      transform: translateY(0.25rem);
      box-shadow: 0 0 0 0.125rem color-mix(in oklab, black 37%, transparent);
    }
  }
}

